# rocHPCG

./: .clang-format  CMakeLists.txt  Jenkinsfile  LICENSE.md  NOTICES.txt  README.md  install.sh  rtest.xml
.github/: CODEOWNERS  CONTRIBUTING.md
.jenkins/: common.groovy  precheckin.groovy
cmake/: Dependencies.cmake  FindLIBNUMA.cmake  Findrocprim.cmake  SetToolchain.cmake  version.cmake
docker/: dockerfile-build-centos  dockerfile-build-sles  dockerfile-build-ubuntu-rock
docs/source/: conf.py
omptarget/: README
omptarget-hip/: LICENSE.md  install.sh
omptarget-hip/src/: CG.cpp  CG.hpp  CGData.hpp  CG_ref.cpp  CG_ref.hpp  CMakeLists.txt  ComputeDotProduct.cpp  ComputeMG.cpp  ComputeProlongation.cpp  ComputeProlongation.hpp  ComputeResidual_ref.cpp  ComputeRestriction.cpp  ComputeRestriction.hpp  ComputeSPMV.cpp  ComputeSYMGS.cpp  ComputeWAXPBY.cpp  ComputeWAXPBY.hpp  ExchangeHalo.cpp  ExchangeHalo.hpp  GenerateCoarseProblem.hpp  GenerateProblem.cpp  Memory.hpp  MultiColoring.cpp  OptimizeProblem.cpp  SetupHalo.hpp  SparseMatrix.cpp  TestCG.cpp  TestSymmetry.cpp  Vector.hpp  hpcg.hpp  init.cpp  main.cpp
omptarget/hpcg/: CMakeLists.txt  Makefile.am  Makefile.ext
omptarget/hpcg/setup/: Make.LLVM_OMP_TARGET  Make.MPI_LLVM_OMP_TARGET
omptarget/hpcg/src/: CG.cpp  CG.hpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_ref.cpp  ComputeProlongation.cpp  ComputeProlongation.hpp  ComputeRestriction.cpp  ComputeRestriction.hpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSPMV_ref.cpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeWAXPBY.cpp  GenerateCoarseProblem.cpp  GenerateGeometry.cpp  GenerateProblem_ref.cpp  OptimizeProblem.cpp  OptimizeProblem.hpp  ReportResults.cpp  SparseMatrix.hpp  TestCG.cpp  TestSymmetry.cpp  Vector.hpp  globals.hpp  main.cpp
src/: CG.cpp  CG.hpp  CGData.hpp  CG_ref.cpp  CG_ref.hpp  CMakeLists.txt  CheckProblem.cpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeProlongation.cpp  ComputeProlongation.hpp  ComputeResidual.cpp  ComputeResidual_ref.hpp  ComputeRestriction.cpp  ComputeRestriction.hpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeWAXPBY.cpp  ComputeWAXPBY.hpp  ExchangeHalo.cpp  ExchangeHalo.hpp  GenerateCoarseProblem.cpp  GenerateCoarseProblem.hpp  GenerateCoarseProblem_ref.cpp  GenerateCoarseProblem_ref.hpp  GenerateProblem.cpp  GenerateProblem.hpp  GenerateProblem_ref.cpp  MGData.hpp  Memory.cpp  Memory.hpp  MultiColoring.cpp  MultiColoring.hpp  OptimizeProblem.cpp  OutputFile.cpp  Permute.cpp  (+20 more)
